--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/MySportsCenter
+jdbc.url=jdbc:mysql://localhost:3306/BBS4M
 jdbc.username=root
 jdbc.password=root
