--- a/pom.xml
+++ b/pom.xml
@@ -120,10 +120,18 @@
       <artifactId>commons-io</artifactId>
       <version>1.3.2</version>
     </dependency>
+
     <dependency>
       <groupId>commons-fileupload</groupId>
       <artifactId>commons-fileupload</artifactId>
       <version>1.2.1</version>
+    </dependency>
+
+    <!-- javaee api -->
+    <dependency>
+      <groupId>javax</groupId>
+      <artifactId>javaee-api</artifactId>
+      <version>7.0</version>
     </dependency>
   </dependencies>
   <build>
